--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>hello, world</h1>
-    <p>Call me Ishmael.</p>
+    <p><a href="about.html">About this project</a></p>
     <img src="images/breaching_whale.jpg">
   </body>
 </html>
